syntax = "proto3";

package com.taotao.cloud.log.api.grpc;

option java_multiple_files = true;
option java_package = "com.taotao.cloud.log.api.grpc";
option java_outer_classname = "DeviceFixProto";
//option objc_class_prefix = "HLW";

// The device service definition.
service DeviceFixService {
    // Sends a message
    rpc insertDeviceFix (DeviceFix) returns (BooleanReply){}
    rpc updateDeviceFix (DeviceFix) returns (BooleanReply){}
    rpc searchDeviceFix (ConditionsRequest) returns (DeviceFix){}
    rpc deleteDeviceFix (ConditionsRequest) returns (BooleanReply){}
}

// The request message .
message ConditionsRequest {
    string id = 1;
}

message DeviceFix {
    string id = 1;
    string serialNum = 2;
    string userNum = 3;
    int32  status = 4;
    int32  type = 5;
    string address = 6;
    string createtime = 7;
    string updatetime = 8;
}

// The response message
message BooleanReply {
    bool reply = 1;
}

// The response message
message ObjectReply {
    bool reply = 1;
}
